kustomize/base/notes-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api
  labels: { app: notes-api }
spec:
  selector: { app: notes-api }
  ports:
    - { name: http, port: 8000, targetPort: http }
