kustomize/base/notes-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-db
  labels: { app: notes-db }
spec:
  clusterIP: None            # headless : identité DNS stable par pod
  selector: { app: notes-db }
  ports:
    - { port: 5432, name: postgres }
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: notes-db
spec:
  serviceName: notes-db
  replicas: 1
  selector:
    matchLabels: { app: notes-db }
  template:
    metadata:
      labels: { app: notes-db }
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - { containerPort: 5432, name: postgres }
          volumeMounts:
            - { name: data, mountPath: /var/lib/postgresql/data }
          readinessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d notes"] }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket: { port: postgres }
            initialDelaySeconds: 30
            periodSeconds: 10
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits:   { memory: 512Mi }
  volumeClaimTemplates:
    - metadata: { name: data }
      spec:
        accessModes: [ ReadWriteOnce ]
        resources: { requests: { storage: 2Gi } }
