kustomize/base/notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes
spec:
  ingressClassName: nginx
  rules:
    - host: notes.127.0.0.1.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: notes-api, port: { number: 8000 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: notes-web, port: { number: 8080 } }
    - host: api.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: notes-api, port: { number: 8000 } }
